--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,6 @@
 :root {
-  --card-height: 50px;
+  --card-height: 100px;
+  --card-line-height: 50px;
 }
 
 .card {
@@ -8,7 +9,8 @@
   margin: 10px;
   padding: 0px;
   list-style-type: none;
-  width: 125px;
+  width: 175px;
+  font-size: 20px;
   height: var(--card-height);
   cursor: pointer;
   user-select: none;
